--- a/dynamic-docs.Rmd
+++ b/dynamic-docs.Rmd
@@ -38,6 +38,7 @@ To create this HTML document, simply compile the corresponding R Markdown file i
 ```{r, build-html, eval = FALSE}
 Rscript -e "library(knitr); knit2html('dynamic-docs.Rmd')"
 ```
+This tutorial by Christopher Paciorek is licensed under a Creative Commons Attribution 3.0 Unported License.
 
 <!--
 #pandoc --number-sections spark.md -o spark.html
