--- a/demo.lyx
+++ b/demo.lyx
@@ -1,5 +1,5 @@
-#LyX 2.0 created this file. For more info see http://www.lyx.org/
-\lyxformat 413
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
+\lyxformat 474
 \begin_document
 \begin_header
 \textclass article
@@ -18,13 +18,13 @@ knitr
 \font_roman default
 \font_sans default
 \font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
-
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -44,15 +44,24 @@ knitr
 \pdf_pdfusetitle true
 \papersize default
 \use_geometry true
-\use_amsmath 1
-\use_esint 1
-\use_mhchem 0
-\use_mathdots 0
-\cite_engine natbib_authoryear
+\use_package amsmath 1
+\use_package amssymb 1
+\use_package cancel 1
+\use_package esint 1
+\use_package mathdots 0
+\use_package mathtools 1
+\use_package mhchem 0
+\use_package stackrel 1
+\use_package stmaryrd 1
+\use_package undertilde 1
+\cite_engine natbib
+\cite_engine_type authoryear
+\biblio_style plainnat
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
+\justification true
 \use_refstyle 0
 \index Index
 \shortcut idx
@@ -96,58 +105,67 @@ August 2015
 \end_layout
 
 \begin_layout Chunk
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<setup, include=FALSE>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # include any code here you don't want to show up in the document,
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # e.g., package and dataset loading
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 require(ggplot2)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 set.seed(0)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # also a good place to set global chunk options
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 library(knitr) # need this for opts_chunk command
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 opts_chunk$set(fig.width = 5, fig.height = 5)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # if we wanted chunks by default not to be evaluated
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # opts_chunk$set(eval = FALSE) 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
-@ 
+@
+\end_layout
+
+\end_inset
+
+ 
 \end_layout
 
 \begin_layout Section
@@ -336,34 +354,43 @@ Here's an R code chunk using standard Sweave formatting but making sure
  of the toolbar near the top of the LyX window.
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
 
-<<r-chunk1>>= 
+\begin_layout Plain Layout
+
+<<r-chunk1>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a <- c(7, 3)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 mean(a)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 b <- a + 3
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 mean(b)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -388,21 +415,28 @@ noindent
  Here's another chunk:
 \end_layout
 
-\begin_layout Chunk
-\noindent
+\begin_layout Standard
+\begin_inset ERT
+status open
 
-<<r-chunk2>>= 
+\begin_layout Plain Layout
+
+<<r-chunk2>>=
 \end_layout
 
-\begin_layout Chunk
-\noindent
+\begin_layout Plain Layout
 
 mean(b)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -416,19 +450,28 @@ When running R code, output is printed interspersed with the code, as one
 Let's make a plot
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
 
-<<r-plot, fig.height = 3>>=
+\begin_layout Plain Layout
+
+<<r-plot, fig.height=3>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
-hist(rnorm(20)) 
+hist(rnorm(20))
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -473,63 +516,90 @@ eval
  flags.
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<include, include=FALSE>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 cat("this code is evaluated but nothing is printed in the document")
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 library(fields)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # fields package should now be loaded for use by later chunks 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
 \end_layout
 
-\begin_layout Chunk
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<echo, echo=FALSE>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 cat("this code is not printed in the document but results of evaluating
  the code are printed")
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
 \end_layout
 
-\begin_layout Chunk
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<eval, eval=FALSE>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 cat("this code is not evaluated but the code itself is printed in the document")
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
 \end_layout
 
-\begin_layout Chunk
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 
 \end_layout
 
@@ -541,19 +611,28 @@ cache=TRUE
  tag so they don't need to be rerun every time you compile the document.
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<slow-step, cache=TRUE>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 mean(rnorm(5e7))
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
@@ -568,29 +647,38 @@ bash
 A bash chunk:
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<bash-chunk1, engine='bash'>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 df -h 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 cd /tmp 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 pwd
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -599,19 +687,28 @@ Unfortunately, output from bash chunks occurs after all the code is printed.
  
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<bash-chunk2, engine='bash'>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 pwd
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -622,64 +719,82 @@ Inline bash code won't work.
 Embedding Python code
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<py-chunk1, engine='python'>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 import numpy as np 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 x = np.array((3, 5, 7)) 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 print(x.sum()) 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 x.min() # note not printed 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Chunk
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<py-chunk2, engine='python'>>= 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 try: 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 	print(x[0]) 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 except NameError: 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 	print('x does not exist') 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @ 
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -701,50 +816,79 @@ Reading code from an external file
 \begin_layout Standard
 It's sometimes nice to draw code in from a separate file.
  Note that a good place for reading the source file via 
+\family typewriter
+read
 \backslash
-texttt{read
-\backslash
-_chunk()} is in an initial setup chunk at the beginning of the document.
+_chunk()
+\family default
+ is in an initial setup chunk at the beginning of the document.
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<read-chunk, echo=FALSE>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 library(knitr)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 read_chunk('demo.R')
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
 \end_layout
 
-\begin_layout Chunk
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<external_chunk_1>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
 \end_layout
 
-\begin_layout Chunk
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<external_chunk_2>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
@@ -766,84 +910,93 @@ Having long lines be nicely formatted and other aspects of formatting can
  
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<r-long>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 b <- "Statistics at UC Berkeley: We are a community engaged in research
  and education in probability and statistics.
  In addition to developing fundamental theory and methodology, we are actively"
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # Statistics at UC Berkeley: We are a community engaged in research and
  education in probability and statistics.
  In addition to developing fundamental theory and methodology, we are actively
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # this should work but often doesn't
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 cat(b, fill = TRUE)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 vecLongName = rnorm(100)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a = length(mean(5 * vecLongName + vecLongName - exp(vecLongName) + vecLongName
  * vecLongName, na.rm = TRUE))
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a = length(mean(5 * vecLongName + vecLongName)) # this is a comment that
  goes over the line by a good long ways
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a = length(mean(5 * vecLongName + vecLongName - exp(vecLongName) + vecLongName,
  na.rm = TRUE)) # this is a comment that goes over the line by a good long
  long long long long long long long ways
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # long output usually is fine
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 rnorm(100)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -855,111 +1008,120 @@ tidy=FALSE
 , but I have not done that here.
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<r-long-tidy>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # breaking up a string
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 b <- "Statistics at UC Berkeley: We are a community engaged in research
  
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 and education in probability and statistics.
  In addition to developing 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 fundamental theory and methodology, we are actively"
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # breaking up a comment
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # Statistics at UC Berkeley: We are a community engaged in research and
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # education in probability and statistics.
  In addition to developing
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # fundamental theory and methodology, we are actively
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # breaking up code lines
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 vecLongName = rnorm(100)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a <- length(mean(5 * vecLongName + vecLongName - exp(vecLongName) + 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 vecLongName * vecLongName, na.rm = TRUE))
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a <- length(mean(5 * vecLongName + vecLongName)) # this is a comment that
  
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # goes over the line by a good long ways
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 a <- length(mean(5 * vecLongName + vecLongName - exp(vecLongName) + 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 vecLongName, na.rm = TRUE)) # this is a comment that goes over the line
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
-# by a good long long long long long long long long ways 
+# by a good long long long long long long long long ways
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -973,12 +1135,17 @@ In bash, we have similar problems with lines overflowing in PDF output,
  
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<bash1, engine='bash'>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 echo "Statistics at UC Berkeley: We are a community engaged in research
  and education in probability and statistics.
@@ -986,11 +1153,11 @@ echo "Statistics at UC Berkeley: We are a community engaged in research
  > tmp.txt
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 echo "Second try: Statistics at UC Berkeley: We are a community engaged
  
@@ -998,7 +1165,7 @@ echo "Second try: Statistics at UC Berkeley: We are a community engaged
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 in research and education in probability and statistics.
  In addition to 
@@ -1006,30 +1173,35 @@ in research and education in probability and statistics.
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 developing fundamental theory and methodology, we are actively" 
 \backslash
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 >> tmp.txt
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 cat tmp.txt
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -1037,49 +1209,58 @@ We also have problems with long comments, so would need to manually format
  them.
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
 
 <<bash2, engine='bash'>>=
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # the following long comment line is not broken in my test:
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad
  kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # instead manually break it:
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # adlfjaf jkladf afdl
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -1092,112 +1273,113 @@ In Python, there is similar trouble with lines overflowing in PDF output
  
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Standard
+\begin_inset ERT
+status open
 
-\end_layout
-
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 <<test-python, engine='python'>>=
 \end_layout
 
-\begin_layout Chunk
-
-\end_layout
-
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # this overflows the page in some contexts
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 b = "asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad
  kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl"
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 print(b)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # this code overflows the page in some contexts
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 zoo = {"lion": "Simba", "panda": None, "whale": "Moby", "numAnimals": 3,
  "bear": "Yogi", "killer whale": "shamu", "bunny:": "bugs"}
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 print(zoo)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # instead manually break the code
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 zoo = {"lion": "Simba", "panda": None, "whale": "Moby", 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 	"numAnimals": 3, "bear": "Yogi", "killer whale": "shamu", 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 	"bunny:": "bugs"}
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 print(zoo)
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # long comments overflow too
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad
  kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 # and the long output that will appear next in the resulting document (from
  evaluation of the code above) also overflows:
 \end_layout
 
-\begin_layout Chunk
+\begin_layout Plain Layout
 
 @
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
